Add Orchard Core package

--- a/.editorconfig
+++ b/.editorconfig
@@ -9,3 +9,6 @@ indent_style = space
 insert_final_newline = true
 tab_width = 4
 trim_trailing_whitespace = true
+
+[*.cs]
+dotnet_sort_system_directives_first = true
