--- a/src/RoughCut.Web/RoughCut.Web.csproj
+++ b/src/RoughCut.Web/RoughCut.Web.csproj
@@ -9,5 +9,6 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="6.0.4" />
+    <PackageReference Include="OrchardCore.Application.Cms.Core.Targets" Version="1.3.0" />
   </ItemGroup>
 </Project>
