--- a/src/RoughCut.Web/RoughCut.Web.csproj
+++ b/src/RoughCut.Web/RoughCut.Web.csproj
@@ -1,14 +1,16 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
+    <PreserveCompilationReferences>true</PreserveCompilationReferences>
+    <TargetFramework>net6.0</TargetFramework>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="6.0.4" />
     <PackageReference Include="OrchardCore.Application.Cms.Core.Targets" Version="1.3.0" />
+    <PackageReference Include="SafeMode" Version="1.3.0" />
   </ItemGroup>
 </Project>
