--- a/src/RoughCut.Web/RoughCut.Web.csproj
+++ b/src/RoughCut.Web/RoughCut.Web.csproj
@@ -13,11 +13,6 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="6.0.5" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Remove="wwwroot\css\" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="wwwroot\css\" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.5" />
   </ItemGroup>
 </Project>
