--- a/.editorconfig
+++ b/.editorconfig
@@ -9,3 +9,20 @@ indent_style = space
 insert_final_newline = true
 tab_width = 4
 trim_trailing_whitespace = true
+
+[*.cs]
+dotnet_naming_rule.underscore_camel_case_for_private_fields.severity = suggestion
+dotnet_naming_rule.underscore_camel_case_for_private_fields.style = underscore_camel_case_style
+dotnet_naming_rule.underscore_camel_case_for_private_fields.symbols = private_fields
+dotnet_naming_style.underscore_camel_case_style.capitalization = camel_case
+dotnet_naming_style.underscore_camel_case_style.required_prefix = _
+dotnet_naming_symbols.private_fields.applicable_accessibilities = private
+dotnet_naming_symbols.private_fields.applicable_kinds = field
+
+dotnet_sort_system_directives_first = true
+
+[*.csproj]
+indent_size = 2
+
+[*.json]
+indent_size = 2
