Fix setup recipe; minify CSS

--- a/assets/package.json
+++ b/assets/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "main": "sass/styles.scss",
   "scripts": {
-    "css-build": "node-sass --omit-source-map-url sass/styles.scss ../src/RoughCut.Web/wwwroot/css/styles.css",
+    "css-build": "node-sass --omit-source-map-url sass/styles.scss ../src/RoughCut.Web/wwwroot/css/styles.min.css --output-style compressed",
     "css-watch": "npm run css-build -- --watch",
     "start": "npm run css-watch"
   },
