--- a/src/RoughCut.Web/RoughCut.Web.csproj
+++ b/src/RoughCut.Web/RoughCut.Web.csproj
@@ -18,5 +18,6 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="OrchardCore.Application.Cms.Core.Targets" Version="1.4.0" />
+    <PackageReference Include="OrchardCore.Logging.Serilog" Version="1.4.0" />
   </ItemGroup>
 </Project>
