--- a/src/RoughCut.Web/appsettings.Production.json
+++ b/src/RoughCut.Web/appsettings.Production.json
@@ -1,7 +1,18 @@
 {
-    "Logging": {
-        "LogLevel": {
-            "Default": "Warning"
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Warning"
+    },
+    "WriteTo": [
+      {
+        "Name": "File",
+        "Args": {
+          "path": "App_Data/Logs/orchard-core-log.txt",
+          "rollingInterval": "Day",
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.ffff}|{TenantName}|{RequestId}|{SourceContext}|{Level:u3}|{Message:lj}{NewLine}{Exception}",
+          "restrictedToMinimumLevel": "Warning"
         }
-    }
+      }
+    ]
+  }
 }
