--- a/src/RoughCut.Web/appsettings.Staging.json
+++ b/src/RoughCut.Web/appsettings.Staging.json
@@ -1,7 +1,18 @@
-﻿{
-  "Logging": {
-    "LogLevel": {
+{
+  "Serilog": {
+    "MinimumLevel": {
       "Default": "Warning"
-    }
+    },
+    "WriteTo": [
+      {
+        "Name": "File",
+        "Args": {
+          "path": "App_Data/Logs/orchard-core-log.txt",
+          "rollingInterval": "Day",
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.ffff}|{TenantName}|{RequestId}|{SourceContext}|{Level:u3}|{Message:lj}{NewLine}{Exception}",
+          "restrictedToMinimumLevel": "Warning"
+        }
+      }
+    ]
   }
 }
